Aligned in row and fixed element overflow

--- a/style.css
+++ b/style.css
@@ -176,6 +176,20 @@ body {
     margin: 0rem 0.2rem;
 }
 
+#matrix{
+    width: 100%;
+}
+
+.four-week {
+    display: flex;
+    width: 99%;
+    justify-content: space-between;
+}
+
+.desktop-days {
+    width: 23%;
+
+}
 .dropdown {
     position: relative;
     display: inline-block;
@@ -242,6 +256,7 @@ body {
 
 .checkbox-label {
     width: 97%;
+    overflow: hidden;
 }
 
 .checkbox {
